--- a/Frontend/website/public/index.html
+++ b/Frontend/website/public/index.html
@@ -6,13 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>Zain.ico">
     <title>ZainPM</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-dO9+zW2lLlMpEmP9OYt6uXV+j4sF+jkQKlfNE7lYtQdZC5YnHg1uP31FKJsKOnn2Y9KS3UDP2iTufq0X8e+Jig=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
   </head>
   <body>
